@@ -2,7 +2,8 @@
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "Exporter" => "5.57";
-requires "Sub::Util" => "1.40";
+requires "List::Util" => "1.45";
+requires "Sub::Util" => "1.45";
 requires "perl" => "v5.14.0";
 requires "strict" => "0";
 requires "warnings" => "0";
